--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,13 @@ code {
 .todo i {
   z-index: 2;
 }
+
+h1 {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+h2, h3, h4, h5, h6 {
+  font-size: 18px;
+  font-weight: 700;
+}
